--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -75,12 +75,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  /* flex-wrap: wrap; */
+  /* max-width: 800px; */
   margin-top: 3rem;
 }
 
 .card {
+  width: 280px;
   margin: 1rem;
   flex-basis: 45%;
   padding: 1.5rem;
@@ -90,6 +91,10 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.card img {
+  object-fit: cover;
 }
 
 .card:hover,
